--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@capacitor/core": "1.3.0",
     "@capacitor/ios": "^1.3.0",
+    "@deckdeckgo/lazy-img": "^1.0.0-rc.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
