--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build
-        run: ionic build --prod
+        run: npm run build --prod
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
